# console-editor

./: .gitignore  CMakeLists.txt  README.md
data/0_example/: recipe-export.xml
data/1_example/: recipe-export.xml
include/managers/: fs_manager.hpp  render_manager.hpp
include/utils/: fs.hpp  ui.hpp
include/xml_processors/: processor.hpp  processor_base.hpp
src/: main.cpp
src/managers/: fs_manager.cpp  render_manager.cpp
src/utils/: fs.cpp  fs.h  ui.cpp
src/xml_processors/: processor.cpp  recipes.cpp
